Controller ORCJAVA-294
======================

  - Update KNX implementation to EventListener API (Marcus Redeker)



Controller 2.1.0 (2013-XX-XX Twin Galaxies)
===========================================

New Features:

  - EnOcean Implementation (Rainer Hitz, ORCJAVA-348)
  - Mi Casa Verde Vera Integration (Marcus Redeker, ORCJAVA-330, ORCJAVA-331)
  - Round robind database (RRD) integration for storing sensor
    data (Marcus Redeker, ORCJAVA-343)
  - EmonCMS integration for storing sensor data (Marcus Redeker, ORCJAVA-357)
  - WebConsole upgraded to version 2.1.1, fixes issues with stuck
    loading screen (Richard Turner, ORCJAVA-345)
  - Added DSC-IT 100 Security System integration - IP to serial (Greg Rapp)
  - Lagarto server (panStamps) integration (Daniel Berenguer)
  - Support 'custom' sensor types with virtual commands (ORCJAVA-217)
  - KNX: added distinct levels for 'DIM' and 'SCALE' commands that allow
    set values to be configured for buttons, e.g. 'DIM 50' to dim directly
    to 50% (Eric Bariaux, ORCJAVA-71).
  - HTTP protocol: methods GET, POST, PUT and DELETE are now supported.
    For HTTP/JSON return documents, a JSON Path expression is supported.
    HTTP content-type headers are supported. For outgoing HTTP request, 
    a user agent header is included which contains 'OpenRemoteController'  
    as agent value which HTTP applications can use to identify requests 
    originating from the controller. Internally, the implementation has 
    been converted to use URIs instead of URLs which resolves an issue with 
    lack of encoding of HTTP parameters  which contain which contain white 
    spaces or other special characters (Marcus Redeker, ORCJAVA-260)
  - One Wire: Added possibility to specify temperature values in
    either Celsius (default), Kelvin, Fahrenheit or Rankine scales, data
    property added for sending values to switches (Marcus Redeker)
  - Shell Command Execution: polling interval and regular expression